# movies-service

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  local.env  pyproject.toml  requirements.txt
app/: main.py
app/application/core/: config.py  exceptions.py  logging.py
app/domain/services/: movie.py
app/flows/: main.py
app/infrastructure/models/: __init__.py  base.py  movie.py
app/infrastructure/repositories/: base.py  movie.py
app/infrastructure/repositories/db/: helpers.py  postgres.py  session.py
app/infrastructure/schemas/: base.py  health.py  movie.py  query_params.py  responses.py
app/presentation/views/: health.py  movie.py
app/scraper/: base.py  run.py
migrations/: env.py
migrations/versions/: 2952d0495035_change_some_fields.py  8e4c74c089c3_remove_updated_at_field.py  95fdb3ed3a6a_db_initial.py
tests/: conftest.py  factories.py
tests/domain/services/: test_movie.py
tests/flows/: factories.py  test_main.py
tests/infrastucture/repositories/db/: test_postgres.py  test_session.py
tests/presentation/views/: test_health.py  test_movie.py
tests/scraper/: test_base.py  test_run.py
